--- a/React-JS/final-project/client/public/index.html
+++ b/React-JS/final-project/client/public/index.html
@@ -4,16 +4,18 @@
 <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>NURON - NFT Marketplace</title>
+    <meta name="robots" content="noindex, follow" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <meta name="theme-style-mode" content="1"> <!-- 0 == light, 1 == dark -->
 
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.png">
     <!-- CSS 
     ============================================ -->
     <link rel="stylesheet" href="/css/vendor/bootstrap.min.css">
@@ -26,7 +28,6 @@
 
     <!-- Style css -->
     <link rel="stylesheet" href="/css/style.css">
-    <title>React App</title>
 </head>
 
 <body className="template-color-1 nft-body-connect">
